PP-751: OSS should support partners that don't create users as part of Connect/ call
